--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "resend": "^3.2.0",
     "tailwind-merge": "^2.5.2"
   },
   "devDependencies": {
