fix: improve PDF display in resume page
- Replace iframe with object tag for better PDF compatibility
- Add fallback UI for browsers that don't support PDF preview
- Add Content-Type header for PDF files in vercel.json
- Fix linting issues with apostrophe escaping
- Improve accessibility with aria-label and proper fallback

--- a/vercel.json
+++ b/vercel.json
@@ -116,6 +116,10 @@
         {
           "key": "X-Frame-Options",
           "value": "SAMEORIGIN"
+        },
+        {
+          "key": "Content-Type",
+          "value": "application/pdf"
         }
       ]
     }
