Fix PDF embedding issues in production
- Update vercel.json headers to allow PDF embedding
- Change X-Frame-Options from DENY to SAMEORIGIN
- Add Content-Security-Policy for PDF files
- Improve resume page with better error handling
- Add loading states and fallback UI for PDF embedding
- Add client-side error detection for PDF loading failures

--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
         },
         {
           "key": "X-Frame-Options",
-          "value": "DENY"
+          "value": "SAMEORIGIN"
         },
         {
           "key": "X-XSS-Protection",
@@ -120,6 +120,10 @@
         {
           "key": "Content-Type",
           "value": "application/pdf"
+        },
+        {
+          "key": "Content-Security-Policy",
+          "value": "frame-ancestors 'self'"
         }
       ]
     }
