--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "next": "^15.5.2",
     "next-intl": "^4.3.5",
     "next-themes": "^0.4.6",
+    "pdfjs-dist": "^5.4.149",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-pdf": "^10.1.0",
     "resend": "^3.2.0",
     "tailwind-merge": "^2.5.2"
   },
