fix: resolve hydration mismatches and improve easter egg
- Fix Math.random() usage in floating-layers.tsx with deterministic positioning
- Fix Math.random() usage in particles.tsx with index-based calculations
- Fix window object access in magnetic-cursor.tsx with proper state management
- Replace Math.sin() with modulo-based pseudo-random in easter-egg.tsx
- Fix Math.random() in loading-animation.tsx with deterministic variation
- Ensure all components render identically on server and client
- Remove duplicate key issues in easter egg particle system
- Improve cyberpunk terminal with stable particle generation

All hydration warnings resolved, components now SSR-compatible

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -69,6 +69,22 @@
     "spaced-comment": ["error", "always"],
     "no-console": "warn",
     "prefer-const": "error",
-    "no-var": "error"
+    "no-var": "error",
+    "no-unused-vars": [
+      "error",
+      {
+        "vars": "all",
+        "args": "after-used",
+        "ignoreRestSiblings": false,
+        "argsIgnorePattern": "^_",
+        "varsIgnorePattern": "^_"
+      }
+    ],
+    "no-unused-expressions": "error",
+    "no-unreachable": "error",
+    "no-unreachable-loop": "error",
+    "no-constant-condition": "error",
+    "no-duplicate-imports": "error",
+    "import/no-duplicates": "error"
   }
 }
