--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf-viewer/toolbar": "^3.12.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "class-variance-authority": "^0.7.0",
@@ -23,10 +26,9 @@
     "next": "^15.5.2",
     "next-intl": "^4.3.5",
     "next-themes": "^0.4.6",
-    "pdfjs-dist": "^5.4.149",
+    "pdfjs-dist": "3.0.279",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-pdf": "^10.1.0",
     "resend": "^3.2.0",
     "tailwind-merge": "^2.5.2"
   },
@@ -35,6 +37,8 @@
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.2.5",
