--- a/vercel.json
+++ b/vercel.json
@@ -114,16 +114,12 @@
           "value": "public, max-age=31536000, immutable"
         },
         {
-          "key": "X-Frame-Options",
-          "value": "SAMEORIGIN"
-        },
-        {
           "key": "Content-Type",
           "value": "application/pdf"
         },
         {
-          "key": "Content-Security-Policy",
-          "value": "frame-ancestors 'self' https://hoangle.xyz"
+          "key": "X-Frame-Options",
+          "value": "ALLOWALL"
         },
         {
           "key": "Access-Control-Allow-Origin",
