feat: implement next-sitemap for better SEO
- Add next-sitemap package for robust sitemap generation
- Create comprehensive next-sitemap.config.js with custom priorities
- Include dynamic project pages in sitemap automatically
- Generate robots.txt with proper Googlebot rules
- Update build scripts to generate sitemap on build
- Remove old sitemap.ts and robots.ts files
- Update vercel.json to remove unnecessary rewrites
- Add Google Search Console meta tag to layout head
- Optimize sitemap with proper change frequencies and priorities

--- a/vercel.json
+++ b/vercel.json
@@ -22,6 +22,14 @@
         {
           "key": "X-XSS-Protection",
           "value": "1; mode=block"
+        },
+        {
+          "key": "Referrer-Policy",
+          "value": "origin-when-cross-origin"
+        },
+        {
+          "key": "Permissions-Policy",
+          "value": "camera=(), microphone=(), geolocation=()"
         }
       ]
     },
@@ -130,16 +138,20 @@
           "value": "GET, HEAD, OPTIONS"
         }
       ]
-    }
-  ],
-  "rewrites": [
-    {
-      "source": "/sitemap.xml",
-      "destination": "/sitemap"
     },
     {
-      "source": "/robots.txt",
-      "destination": "/robots"
+      "source": "/sitemap.xml",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/xml"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400, s-maxage=86400"
+        }
+      ]
     }
-  ]
+  ],
+  "rewrites": []
 }
