--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.452.0",
-    "next": "^15.5.2",
+    "next": "15.5.7",
     "next-intl": "^4.3.5",
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
